--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+src/assets/inspiration.css
+src/assets/inspiration.html
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
