--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-shopy",
-  "homepage": "https://me0wge.github.io/E-Shopy/",
+  "homepage": "https://me0wge.github.io/LoveShop/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
